--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -39,6 +39,8 @@
 	"leawind_third_person.option.center_offset_when_flying.desc": "当相机附着的实体正在使用鞘翅飞行时，不使用相机偏移量",
 	"leawind_third_person.option.player_fade_out_enabled": "启用玩家半透明",
 	"leawind_third_person.option.player_fade_out_enabled.desc": "当相机靠近玩家时，让玩家变得半透明",
+	"leawind_third_person.option.player_invisible_threshold": "玩家不可见距离阈值",
+	"leawind_third_person.option.player_invisible_threshold.desc": "当相机离玩家足够近时，玩家变得不可见",
 	"leawind_third_person.option.use_camera_pick_in_creative": "创造模式下使用相机pick",
 	"leawind_third_person.option.use_camera_pick_in_creative.desc": "创造模式下玩家视线不会被遮挡，准星指哪就交互哪",
 	"leawind_third_person.option.lock_camera_pitch_angle": "锁定相机的俯仰角",
