update config screen

--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -3,16 +3,16 @@
 	"modmenu.descriptionTranslation.leawind_third_person": "一个实用、丝滑、功能丰富的第三人称模组",
 	"leawind_third_person.text.title": "Leawind的第三人称",
 	"leawind_third_person.text.description": "一个实用、丝滑、功能丰富的第三人称模组",
-	"leawind_third_person.option_category.general": "通用",
-	"leawind_third_person.option_category.general.desc": "一些常用的配置",
+	"leawind_third_person.option_category.common": "常用",
+	"leawind_third_person.option_category.common.desc": "一些常用的配置。",
 	"leawind_third_person.option_category.camera_offset": "相机偏移",
 	"leawind_third_person.option_category.camera_offset.desc": "调整玩家在屏幕上的位置等参数。!你不需要手动调整此页的选项们，因为可以在游戏中按住Z后用鼠标调整。",
 	"leawind_third_person.option_category.smooth_halflife": "平滑系数",
 	"leawind_third_person.option_category.smooth_halflife.desc": "一些值的平滑程度。",
-	"leawind_third_person.option_category.misc": "杂项",
-	"leawind_third_person.option_category.misc.desc": "",
-	"leawind_third_person.option_category.aiming_check": "瞄准检查",
-	"leawind_third_person.option_category.aiming_check.desc": "用于判断当前是否是瞄准模式的规则",
+	"leawind_third_person.option_category.aiming_check": "瞄准模式判定",
+	"leawind_third_person.option_category.aiming_check.desc": "用于判断当前是否是瞄准模式的规则。",
+	"leawind_third_person.option_category.other": "其他",
+	"leawind_third_person.option_category.other.desc": "",
 	"leawind_third_person.option_group.camera_distance_adjustment": "相机距离调节",
 	"leawind_third_person.option_group.camera_distance_adjustment.desc": "第三人称下按住特定按键时可以用滚轮调整相机到玩家的距离。此处可以设置距离的调节范围。",
 	"leawind_third_person.option_group.normal_mode": "正常模式",
