--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -3,14 +3,14 @@
 	"modmenu.descriptionTranslation.leawind_third_person": "A practical, smooth, feature-rich third-person mod.",
 	"leawind_third_person.text.title": "Leawind's Third Person",
 	"leawind_third_person.text.description": "A practical, smooth, feature-rich third-person mod.",
-	"leawind_third_person.option_category.general": "General",
-	"leawind_third_person.option_category.general.desc": "general",
+	"leawind_third_person.option_category.common": "Common",
+	"leawind_third_person.option_category.common.desc": "Commonly used configs.",
 	"leawind_third_person.option_category.camera_offset": "Camera Offset",
 	"leawind_third_person.option_category.camera_offset.desc": "Adjust parameters like camera offset. You don't need to manually adjust the options on this page, as you can hold Z in the game and use the mouse to adjust.",
 	"leawind_third_person.option_category.smooth_halflife": "Smoothness",
 	"leawind_third_person.option_category.smooth_halflife.desc": "Smoothness of certain values.",
-	"leawind_third_person.option_category.misc": "Misc",
-	"leawind_third_person.option_category.misc.desc": "Miscellaneous",
+	"leawind_third_person.option_category.other": "Other",
+	"leawind_third_person.option_category.other.desc": "Other configs not commonly used.",
 	"leawind_third_person.option_category.aiming_check": "Aiming Check",
 	"leawind_third_person.option_category.aiming_check.desc": "Rules to determine if the current mode is aiming.",
 	"leawind_third_person.option_group.camera_distance_adjustment": "Camera Distance Adjustment",
