add config: gaze_opacity

--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -38,7 +38,9 @@
 	"leawind_third_person.option.center_offset_when_flying": "飞行时自动居中",
 	"leawind_third_person.option.center_offset_when_flying.desc": "当相机附着的实体正在使用鞘翅飞行时，不使用相机偏移量",
 	"leawind_third_person.option.player_fade_out_enabled": "启用玩家半透明",
-	"leawind_third_person.option.player_fade_out_enabled.desc": "当相机靠近玩家时，让玩家变得半透明",
+	"leawind_third_person.option.player_fade_out_enabled.desc": "当玩家实体阻挡视野时，让其变得半透明",
+	"leawind_third_person.option.gaze_opacity": "注视透明度",
+	"leawind_third_person.option.gaze_opacity.desc": "当准星放在相机实体上时，将相机实体的不透明度降低到这个值。",
 	"leawind_third_person.option.player_invisible_threshold": "玩家不可见距离阈值",
 	"leawind_third_person.option.player_invisible_threshold.desc": "当相机离玩家足够近时，玩家变得不可见",
 	"leawind_third_person.option.use_camera_pick_in_creative": "创造模式下使用相机pick",
