--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -57,6 +57,8 @@
 	"leawind_third_person.option.render_crosshair_when_aiming.desc": "Display crosshair in aiming mode.",
 	"leawind_third_person.option.render_crosshair_when_not_aiming": "Display crosshair when not aiming",
 	"leawind_third_person.option.render_crosshair_when_not_aiming.desc": "Display crosshair in non-aiming mode.",
+	"leawind_third_person.option.hide_crosshair_when_flying": "Hide crosshair when flying",
+	"leawind_third_person.option.hide_crosshair_when_flying.desc": "Hide crosshair when flying.",
 	"leawind_third_person.option.available_distance_count": "Number of available distances",
 	"leawind_third_person.option.available_distance_count.desc": "Use the mouse wheel to adjust the camera-to-player distance. This option represents the number of distance levels.",
 	"leawind_third_person.option.camera_distance_min": "Minimum distance",
