--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -49,6 +49,8 @@
 	"leawind_third_person.option.lock_camera_pitch_angle.desc": "锁定后无法上下转动",
 	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming": "未瞄准时强制玩家跟随相机转动",
 	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming.desc": "未瞄准时强制玩家视线和相机视线保持平行",
+	"leawind_third_person.option.player_rotate_with_camera_slightly": "玩家头部稍跟随相机",
+	"leawind_third_person.option.player_rotate_with_camera_slightly.desc": "玩家头部稍跟随相机，身体不动。",
 	"leawind_third_person.option.rotate_to_moving_direction": "玩家移动时自动转向前进的方向",
 	"leawind_third_person.option.rotate_to_moving_direction.desc": "玩家移动时自动转向前进的方向",
 	"leawind_third_person.option.auto_turn_body_drawing_a_bow": "拉弓时自动侧身",
