Update config name and description
player_rotate_with_camera_slightly --> player_rotate_to_intrest_point

--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -47,8 +47,8 @@
 	"leawind_third_person.option.lock_camera_pitch_angle.desc": "After locking, it is impossible to rotate up and down.",
 	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming": "Force player to rotate with the camera when not aiming",
 	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming.desc": "Force the player's line of sight to remain parallel to the camera's line of sight when not aiming.",
-	"leawind_third_person.option.player_rotate_with_camera_slightly": "Player head rotate with camera slightly",
-	"leawind_third_person.option.player_rotate_with_camera_slightly.desc": "Let player head rotate with camera slightly, keep body not rotate.",
+	"leawind_third_person.option.player_rotate_to_intrest_point": "Player rotate to intrest point",
+	"leawind_third_person.option.player_rotate_to_intrest_point.desc": "When camera is behind, towards the crosshair. When camera is in front, face to camera",
 	"leawind_third_person.option.rotate_to_moving_direction": "Automatically turn to face the direction of movement when the player moves",
 	"leawind_third_person.option.rotate_to_moving_direction.desc": "Automatically turn to face the direction of movement when the player moves.",
 	"leawind_third_person.option.auto_turn_body_drawing_a_bow": "Automatically turn sideways when drawing a bow",
