--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -16,7 +16,7 @@
 	"leawind_third_person.option_group.camera_distance_adjustment": "Camera Distance Adjustment",
 	"leawind_third_person.option_group.camera_distance_adjustment.desc": "Adjust the camera-to-player distance using the mouse wheel when holding specific keys in third-person mode. This setting determines the adjustment range.",
 	"leawind_third_person.option_group.normal_mode": "Normal Mode",
-	"leawind_third_person.option_group.normal_mode.desc": "When not aiming",
+	"leawind_third_person.option_group.normal_mode.desc": "When not aiming.",
 	"leawind_third_person.option_group.aiming_mode": "Aiming Mode",
 	"leawind_third_person.option_group.aiming_mode.desc": "When aiming with bow, crossbow, trident, etc.",
 	"leawind_third_person.option_group.crosshair": "Crosshair",
@@ -48,7 +48,7 @@
 	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming": "Force player to rotate with the camera when not aiming",
 	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming.desc": "Force the player's line of sight to remain parallel to the camera's line of sight when not aiming.",
 	"leawind_third_person.option.player_rotate_to_intrest_point": "Player rotate to intrest point",
-	"leawind_third_person.option.player_rotate_to_intrest_point.desc": "When camera is behind, towards the crosshair. When camera is in front, face to camera",
+	"leawind_third_person.option.player_rotate_to_intrest_point.desc": "When camera is behind, towards the crosshair. When camera is in front, face to camera.",
 	"leawind_third_person.option.rotate_to_moving_direction": "Automatically turn to face the direction of movement when the player moves",
 	"leawind_third_person.option.rotate_to_moving_direction.desc": "Automatically turn to face the direction of movement when the player moves.",
 	"leawind_third_person.option.auto_turn_body_drawing_a_bow": "Automatically turn sideways when drawing a bow",
@@ -101,8 +101,8 @@
 	"leawind_third_person.option.auto_rotate_interacting.desc": "When pressing the interact key (attack|use|select), the player will automatically rotate.",
 	"leawind_third_person.option.do_not_rotate_when_eating": "Do not rotate when eating",
 	"leawind_third_person.option.do_not_rotate_when_eating.desc": "",
-	"leawind_third_person.option.rotate_interacting_type": "Rotation type",
-	"leawind_third_person.option.rotate_interacting_type.desc": "",
+	"leawind_third_person.option.rotate_interacting_type": "Rotate target when interacting",
+	"leawind_third_person.option.rotate_interacting_type.desc": "True means camera hit result. False means camera rotation.",
 	"leawind_third_person.option.rotate_interacting_type.turn_to_crosshair": "Turn to crosshair",
 	"leawind_third_person.option.rotate_interacting_type.turn_with_camera": "Turn in the same direction as the camera",
 	"leawind_third_person.option.projectile_auto_aim": "Automatically aim when shooting",
