--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -16,9 +16,9 @@
 	"leawind_third_person.option_group.camera_distance_adjustment": "相机距离调节",
 	"leawind_third_person.option_group.camera_distance_adjustment.desc": "第三人称下按住特定按键时可以用滚轮调整相机到玩家的距离。此处可以设置距离的调节范围。",
 	"leawind_third_person.option_group.normal_mode": "正常模式",
-	"leawind_third_person.option_group.normal_mode.desc": "当没有瞄准时",
+	"leawind_third_person.option_group.normal_mode.desc": "当没有瞄准时。",
 	"leawind_third_person.option_group.aiming_mode": "瞄准模式",
-	"leawind_third_person.option_group.aiming_mode.desc": "当使用弓|弩|戟等瞄准时",
+	"leawind_third_person.option_group.aiming_mode.desc": "当使用弓|弩|戟等瞄准时。",
 	"leawind_third_person.option_group.crosshair": "第三人称准星",
 	"leawind_third_person.option_group.crosshair.desc": "",
 	"leawind_third_person.option_group.player_rotation": "玩家转动",
@@ -28,51 +28,51 @@
 	"leawind_third_person.option_group.adjusting_camera": "调整相机",
 	"leawind_third_person.option_group.adjusting_camera.desc": "默认按住Z可以用鼠标调节相机的偏移量和远近。",
 	"leawind_third_person.option_group.behavior_interacting": "交互时玩家转动方式",
-	"leawind_third_person.option_group.behavior_interacting.desc": "当按下交互键（攻击|使用|选取）时，玩家如何转动",
+	"leawind_third_person.option_group.behavior_interacting.desc": "当按下交互键（攻击|使用|选取）时，玩家如何转动。",
 	"leawind_third_person.option.is_mod_enable": "本模组是否启用",
-	"leawind_third_person.option.is_mod_enable.desc": "禁用后将显示原版第三人称视角，但仍可以按键打开配置屏幕",
+	"leawind_third_person.option.is_mod_enable.desc": "禁用后将显示原版第三人称视角，但仍可以按键打开配置屏幕。",
 	"leawind_third_person.option.config_screen_api": "配置屏幕API",
 	"leawind_third_person.option.config_screen_api.desc": "",
 	"leawind_third_person.option.center_offset_when_flying": "飞行时自动居中",
-	"leawind_third_person.option.center_offset_when_flying.desc": "当相机附着的实体正在使用鞘翅飞行时，不使用相机偏移量",
+	"leawind_third_person.option.center_offset_when_flying.desc": "当相机附着的实体正在使用鞘翅飞行时，不使用相机偏移量。",
 	"leawind_third_person.option.player_fade_out_enabled": "启用玩家半透明",
-	"leawind_third_person.option.player_fade_out_enabled.desc": "当玩家实体阻挡视野时，让其变得半透明",
+	"leawind_third_person.option.player_fade_out_enabled.desc": "当玩家实体阻挡视野时，让其变得半透明。",
 	"leawind_third_person.option.gaze_opacity": "注视透明度",
 	"leawind_third_person.option.gaze_opacity.desc": "当准星放在相机实体上时，将相机实体的不透明度降低到这个值。",
 	"leawind_third_person.option.player_invisible_threshold": "玩家不可见距离阈值",
-	"leawind_third_person.option.player_invisible_threshold.desc": "当相机离玩家足够近时，玩家变得不可见",
+	"leawind_third_person.option.player_invisible_threshold.desc": "当相机离玩家足够近时，玩家变得不可见。",
 	"leawind_third_person.option.use_camera_pick_in_creative": "创造模式下使用相机pick",
-	"leawind_third_person.option.use_camera_pick_in_creative.desc": "创造模式下玩家视线不会被遮挡，准星指哪就交互哪",
+	"leawind_third_person.option.use_camera_pick_in_creative.desc": "创造模式下玩家视线不会被遮挡，准星指哪就交互哪。",
 	"leawind_third_person.option.lock_camera_pitch_angle": "锁定相机的俯仰角",
-	"leawind_third_person.option.lock_camera_pitch_angle.desc": "锁定后无法上下转动",
+	"leawind_third_person.option.lock_camera_pitch_angle.desc": "锁定后无法上下转动。",
 	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming": "未瞄准时强制玩家跟随相机转动",
-	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming.desc": "未瞄准时强制玩家视线和相机视线保持平行",
+	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming.desc": "未瞄准时强制玩家视线和相机视线保持平行。",
 	"leawind_third_person.option.player_rotate_to_intrest_point": "玩家头部朝向兴趣点",
-	"leawind_third_person.option.player_rotate_to_intrest_point.desc": "当相机在后方时，朝向准星位置。当相机在面前时，朝向相机",
+	"leawind_third_person.option.player_rotate_to_intrest_point.desc": "当相机在后方时，朝向准星位置。当相机在面前时，朝向相机。",
 	"leawind_third_person.option.rotate_to_moving_direction": "玩家移动时自动转向前进的方向",
-	"leawind_third_person.option.rotate_to_moving_direction.desc": "玩家移动时自动转向前进的方向",
+	"leawind_third_person.option.rotate_to_moving_direction.desc": "玩家移动时自动转向前进的方向。",
 	"leawind_third_person.option.auto_turn_body_drawing_a_bow": "拉弓时自动侧身",
-	"leawind_third_person.option.auto_turn_body_drawing_a_bow.desc": "拉弓时自动侧身，让持弓的手在前，拉弦的手在后",
+	"leawind_third_person.option.auto_turn_body_drawing_a_bow.desc": "拉弓时自动侧身，让持弓的手在前，拉弦的手在后。",
 	"leawind_third_person.option.render_crosshair_when_aiming": "瞄准时显示准星",
-	"leawind_third_person.option.render_crosshair_when_aiming.desc": "在瞄准状态下显示准星",
+	"leawind_third_person.option.render_crosshair_when_aiming.desc": "在瞄准状态下显示准星。",
 	"leawind_third_person.option.render_crosshair_when_not_aiming": "未瞄准时显示准星",
-	"leawind_third_person.option.render_crosshair_when_not_aiming.desc": "在未瞄准状态下显示准星",
+	"leawind_third_person.option.render_crosshair_when_not_aiming.desc": "在未瞄准状态下显示准星。",
 	"leawind_third_person.option.hide_crosshair_when_flying": "飞行时隐藏准星",
-	"leawind_third_person.option.hide_crosshair_when_flying.desc": "飞行时隐藏准星",
+	"leawind_third_person.option.hide_crosshair_when_flying.desc": "飞行时隐藏准星。",
 	"leawind_third_person.option.available_distance_count": "可选的距离数量",
-	"leawind_third_person.option.available_distance_count.desc": "使用鼠标滚轮可以调整相机到玩家距离，该选项的值是距离的档位数量",
+	"leawind_third_person.option.available_distance_count.desc": "使用鼠标滚轮可以调整相机到玩家距离，该选项的值是距离的档位数量。",
 	"leawind_third_person.option.camera_distance_min": "距离下限",
-	"leawind_third_person.option.camera_distance_min.desc": "使用滚轮调整时相机到玩家的最小距离。当处于最小距离时玩家实体会不可见（如果开启该功能）",
+	"leawind_third_person.option.camera_distance_min.desc": "使用滚轮调整时相机到玩家的最小距离。当处于最小距离时玩家实体会不可见（如果开启该功能）。",
 	"leawind_third_person.option.camera_distance_max": "距离上限",
-	"leawind_third_person.option.camera_distance_max.desc": "使用滚轮调整时相机到玩家的最大距离",
+	"leawind_third_person.option.camera_distance_max.desc": "使用滚轮调整时相机到玩家的最大距离。",
 	"leawind_third_person.option.flying_smooth_halflife": "飞行时相机跟随玩家的平滑系数",
 	"leawind_third_person.option.flying_smooth_halflife.desc": "",
 	"leawind_third_person.option.t2f_transition_halflife": "过渡平滑系数",
-	"leawind_third_person.option.t2f_transition_halflife.desc": "从第三人称平滑过渡到第一人称时的平滑系数",
+	"leawind_third_person.option.t2f_transition_halflife.desc": "从第三人称平滑过渡到第一人称时的平滑系数。",
 	"leawind_third_person.option.adjusting_camera_offset_smooth_halflife": "调整相机偏移量的平滑系数",
-	"leawind_third_person.option.adjusting_camera_offset_smooth_halflife.desc": "调整相机时，相机偏移量随鼠标移动而变化的平滑系数",
+	"leawind_third_person.option.adjusting_camera_offset_smooth_halflife.desc": "调整相机时，相机偏移量随鼠标移动而变化的平滑系数。",
 	"leawind_third_person.option.adjusting_distance_smooth_halflife": "调整相机距离的平滑系数",
-	"leawind_third_person.option.adjusting_distance_smooth_halflife.desc": "调整相机距离时，相机到玩家距离变化的平滑系数",
+	"leawind_third_person.option.adjusting_distance_smooth_halflife.desc": "调整相机距离时，相机到玩家距离变化的平滑系数。",
 	"leawind_third_person.option.smooth_halflife_horizon": "水平平滑系数",
 	"leawind_third_person.option.smooth_halflife_horizon.desc": "",
 	"leawind_third_person.option.smooth_halflife_vertical": "垂直平滑系数",
@@ -80,41 +80,41 @@
 	"leawind_third_person.option.camera_offset_smooth_halflife": "相机偏移平滑系数",
 	"leawind_third_person.option.camera_offset_smooth_halflife.desc": "",
 	"leawind_third_person.option.distance_smooth_halflife": "距离平滑系数",
-	"leawind_third_person.option.distance_smooth_halflife.desc": "相机远离玩家的时间",
+	"leawind_third_person.option.distance_smooth_halflife.desc": "相机远离玩家的时间。",
 	"leawind_third_person.option.max_distance": "相机到玩家的最大距离",
 	"leawind_third_person.option.max_distance.desc": "",
 	"leawind_third_person.option.offset_x": "X偏移",
 	"leawind_third_person.option.is_centered": "玩家居中",
-	"leawind_third_person.option.is_centered.desc": "玩家是否位于屏幕中央",
+	"leawind_third_person.option.is_centered.desc": "玩家是否位于屏幕中央。",
 	"leawind_third_person.option.offset_x.desc": "",
 	"leawind_third_person.option.offset_y": "Y偏移",
 	"leawind_third_person.option.offset_y.desc": "",
 	"leawind_third_person.option.offset_center": "居中时的Y偏移",
 	"leawind_third_person.option.offset_center.desc": "长按特定按键可以居中，居中状态下X偏移固定为0，玩家处于屏幕中间。本选项可以调整此时的Y偏移。",
 	"leawind_third_person.option.camera_ray_trace_length": "相机视线探测距离",
-	"leawind_third_person.option.camera_ray_trace_length.desc": "当瞄准的物体超过这个距离时，玩家视线会和相机视线平行",
+	"leawind_third_person.option.camera_ray_trace_length.desc": "当瞄准的物体超过这个距离时，玩家视线会和相机视线平行。",
 	"leawind_third_person.option.sprint_impulse_threshold": "疾跑脉冲阈值",
-	"leawind_third_person.option.sprint_impulse_threshold.desc": "疾跑脉冲阈值",
+	"leawind_third_person.option.sprint_impulse_threshold.desc": "疾跑脉冲阈值。",
 	"leawind_third_person.option.enable_target_entity_predict": "瞄准时启用目标实体预测",
 	"leawind_third_person.option.enable_target_entity_predict.desc": "瞄准时，预测想要射击的目标实体，据此计算玩家朝向，以便更好地瞄准目标。",
 	"leawind_third_person.option.auto_rotate_interacting": "交互时自动转身",
-	"leawind_third_person.option.auto_rotate_interacting.desc": "当按下交互键（攻击|使用|选取）时，玩家会自动转身",
+	"leawind_third_person.option.auto_rotate_interacting.desc": "当按下交互键（攻击|使用|选取）时，玩家会自动转身。",
 	"leawind_third_person.option.do_not_rotate_when_eating": "吃东西时不转身",
 	"leawind_third_person.option.do_not_rotate_when_eating.desc": "",
-	"leawind_third_person.option.rotate_interacting_type": "转身方式",
-	"leawind_third_person.option.rotate_interacting_type.desc": "",
+	"leawind_third_person.option.rotate_interacting_type": "互动时玩家转动目标",
+	"leawind_third_person.option.rotate_interacting_type.desc": "True表示准星落点，False表示相机与相机朝向相同。",
 	"leawind_third_person.option.rotate_interacting_type.turn_to_crosshair": "转向准星",
 	"leawind_third_person.option.rotate_interacting_type.turn_with_camera": "与相机朝向相同",
 	"leawind_third_person.option.projectile_auto_aim": "射击时自动瞄准",
-	"leawind_third_person.option.projectile_auto_aim.desc": "瞄准方块或实体时，自动调整射击角度以击中该目标",
+	"leawind_third_person.option.projectile_auto_aim.desc": "瞄准方块或实体时，自动调整射击角度以击中该目标。",
 	"leawind_third_person.option.determine_aim_mode_by_animation": "通过动画判断瞄准模式",
-	"leawind_third_person.option.determine_aim_mode_by_animation.desc": "当相机实体播放特定动画时，自动进入瞄准模式",
+	"leawind_third_person.option.determine_aim_mode_by_animation.desc": "当相机实体播放特定动画时，自动进入瞄准模式。",
 	"leawind_third_person.option.hold_to_aim_item_pattern_expressions": "手持时自动瞄准",
-	"leawind_third_person.option.hold_to_aim_item_pattern_expressions.desc": "当玩家左手或右手拿着的物品符合任意一条规则时，自动进入瞄准模式",
+	"leawind_third_person.option.hold_to_aim_item_pattern_expressions.desc": "当玩家左手或右手拿着的物品符合任意一条规则时，自动进入瞄准模式。",
 	"leawind_third_person.option.use_to_aim_item_pattern_expressions": "使用时自动瞄准",
-	"leawind_third_person.option.use_to_aim_item_pattern_expressions.desc": "当玩家正在使用的物品符合任意一条规则时，自动进入瞄准模式",
+	"leawind_third_person.option.use_to_aim_item_pattern_expressions.desc": "当玩家正在使用的物品符合任意一条规则时，自动进入瞄准模式。",
 	"leawind_third_person.option.use_to_first_person_pattern_expressions": "使用时暂时进入第一人称",
-	"leawind_third_person.option.use_to_first_person_pattern_expressions.desc": "当玩家正在使用的物品符合任意一条规则时，暂时进入第一人称视角",
+	"leawind_third_person.option.use_to_first_person_pattern_expressions.desc": "当玩家正在使用的物品符合任意一条规则时，暂时进入第一人称视角。",
 	"key.categories.leawind_third_person": "Leawind的第三人称",
 	"key.leawind_third_person.open_config_menu": "打开配置菜单",
 	"key.leawind_third_person.toggle_mod_enable": "切换模组是否启用",
