feat: update translations

--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -13,17 +13,17 @@
 	"leawind_third_person.option_category.other.desc": "Other configs not commonly used.",
 	"leawind_third_person.option_category.aiming_check": "Aiming Check",
 	"leawind_third_person.option_category.aiming_check.desc": "Rules to determine if the current mode is aiming.",
-	"leawind_third_person.option_group.camera_distance_adjustment": "Camera Distance Adjustment",
-	"leawind_third_person.option_group.camera_distance_adjustment.desc": "Adjust the camera-to-player distance using the mouse wheel when holding specific keys in third-person mode. This setting determines the adjustment range.",
+	"leawind_third_person.option_group.camera_distance_adjustment": "Camera Distance Factor Adjustment",
+	"leawind_third_person.option_group.camera_distance_adjustment.desc": "Adjust the camera-to-player distance factor using the mouse wheel when holding specific keys in third-person mode. This setting determines the adjustment range.",
 	"leawind_third_person.option_group.normal_mode": "Normal Mode",
 	"leawind_third_person.option_group.normal_mode.desc": "When not aiming.",
 	"leawind_third_person.option_group.aiming_mode": "Aiming Mode",
 	"leawind_third_person.option_group.aiming_mode.desc": "When aiming with bow, crossbow, trident, etc.",
 	"leawind_third_person.option_group.crosshair": "Crosshair",
 	"leawind_third_person.option_group.crosshair.desc": "",
-	"leawind_third_person.option_group.player_rotation": "Player Rotation",
+	"leawind_third_person.option_group.player_rotation": "Player Entity Rotation",
 	"leawind_third_person.option_group.player_rotation.desc": "",
-	"leawind_third_person.option_group.player_fade_out": "Player Fade Out",
+	"leawind_third_person.option_group.player_fade_out": "Player Entity Fade Out",
 	"leawind_third_person.option_group.player_fade_out.desc": "Fade out the player in tight spaces to avoid obstructing the view.",
 	"leawind_third_person.option_group.adjusting_camera": "Adjusting Camera",
 	"leawind_third_person.option_group.adjusting_camera.desc": "By default, holding Z allows you to use the mouse to adjust the camera's offset and distance.",
@@ -61,9 +61,9 @@
 	"leawind_third_person.option.hide_crosshair_when_flying.desc": "Hide crosshair when flying.",
 	"leawind_third_person.option.available_distance_count": "Number of available distances",
 	"leawind_third_person.option.available_distance_count.desc": "Use the mouse wheel to adjust the camera-to-player distance. This option represents the number of distance levels.",
-	"leawind_third_person.option.camera_distance_min": "Minimum distance",
-	"leawind_third_person.option.camera_distance_min.desc": "The minimum distance from the player when adjusting with the mouse wheel. The player entity becomes invisible when at the minimum distance (if this feature is enabled).",
-	"leawind_third_person.option.camera_distance_max": "Maximum distance",
+	"leawind_third_person.option.camera_distance_min": "Minimum Distance Factor",
+	"leawind_third_person.option.camera_distance_min.desc": "The minimum distance factor from the player when adjusting with the mouse wheel.",
+	"leawind_third_person.option.camera_distance_max": "Maximum Distance Factor",
 	"leawind_third_person.option.camera_distance_max.desc": "The maximum distance from the player when adjusting with the mouse wheel.",
 	"leawind_third_person.option.flying_smooth_halflife": "Smoothness for camera following player during flight",
 	"leawind_third_person.option.flying_smooth_halflife.desc": "",
@@ -81,7 +81,7 @@
 	"leawind_third_person.option.camera_offset_smooth_halflife.desc": "",
 	"leawind_third_person.option.distance_smooth_halflife": "Distance smoothness",
 	"leawind_third_person.option.distance_smooth_halflife.desc": "Time for the camera to move away from the player.",
-	"leawind_third_person.option.max_distance": "Maximum distance from camera to player",
+	"leawind_third_person.option.max_distance": "Maximum Camera-Player Distance Factor",
 	"leawind_third_person.option.max_distance.desc": "",
 	"leawind_third_person.option.offset_x": "X Offset",
 	"leawind_third_person.option.is_centered": "Player Centered",
@@ -107,8 +107,6 @@
 	"leawind_third_person.option.rotate_interacting_type.desc": "True means camera hit result. False means camera rotation.",
 	"leawind_third_person.option.rotate_interacting_type.turn_to_crosshair": "Turn to crosshair",
 	"leawind_third_person.option.rotate_interacting_type.turn_with_camera": "Turn in the same direction as the camera",
-	"leawind_third_person.option.projectile_auto_aim": "Automatically aim when shooting",
-	"leawind_third_person.option.projectile_auto_aim.desc": "When aiming at a block or entity, automatically adjust the shooting angle to hit the target.",
 	"leawind_third_person.option.determine_aim_mode_by_animation": "Determine aiming mode by animation",
 	"leawind_third_person.option.determine_aim_mode_by_animation.desc": "When specific animation is played, automatically enter aiming mode.",
 	"leawind_third_person.option.hold_to_aim_item_pattern_expressions": "Automatically aim when held",
