--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -10,18 +10,18 @@
 	"leawind_third_person.option_category.smooth_halflife": "平滑系数",
 	"leawind_third_person.option_category.smooth_halflife.desc": "一些值的平滑程度。",
 	"leawind_third_person.option_category.aiming_check": "瞄准模式判定",
-	"leawind_third_person.option_category.aiming_check.desc": "用于判断当前是否是瞄准模式的规则。",
+	"leawind_third_person.option_category.aiming_check.desc": "用于判断当前是否为瞄准模式的规则。",
 	"leawind_third_person.option_category.other": "其他",
 	"leawind_third_person.option_category.other.desc": "",
 	"leawind_third_person.option_group.camera_distance_adjustment": "相机距离调节",
-	"leawind_third_person.option_group.camera_distance_adjustment.desc": "第三人称下按住特定按键时可以用滚轮调整相机到玩家的距离。此处可以设置距离的调节范围。",
+	"leawind_third_person.option_group.camera_distance_adjustment.desc": "第三人称下按住特定按键时可以用滚轮调整相机到玩家的距离系数。此处可以设置距离的调节范围。",
 	"leawind_third_person.option_group.normal_mode": "正常模式",
 	"leawind_third_person.option_group.normal_mode.desc": "当没有瞄准时。",
 	"leawind_third_person.option_group.aiming_mode": "瞄准模式",
 	"leawind_third_person.option_group.aiming_mode.desc": "当使用弓|弩|戟等瞄准时。",
 	"leawind_third_person.option_group.crosshair": "第三人称准星",
 	"leawind_third_person.option_group.crosshair.desc": "",
-	"leawind_third_person.option_group.player_rotation": "玩家转动",
+	"leawind_third_person.option_group.player_rotation": "玩家实体转动",
 	"leawind_third_person.option_group.player_rotation.desc": "",
 	"leawind_third_person.option_group.player_fade_out": "玩家半透明",
 	"leawind_third_person.option_group.player_fade_out.desc": "狭小空间内让玩家淡出，避免遮挡视线。",
@@ -61,10 +61,10 @@
 	"leawind_third_person.option.hide_crosshair_when_flying.desc": "飞行时隐藏准星。",
 	"leawind_third_person.option.available_distance_count": "可选的距离数量",
 	"leawind_third_person.option.available_distance_count.desc": "使用鼠标滚轮可以调整相机到玩家距离，该选项的值是距离的档位数量。",
-	"leawind_third_person.option.camera_distance_min": "距离下限",
-	"leawind_third_person.option.camera_distance_min.desc": "使用滚轮调整时相机到玩家的最小距离。当处于最小距离时玩家实体会不可见（如果开启该功能）。",
-	"leawind_third_person.option.camera_distance_max": "距离上限",
-	"leawind_third_person.option.camera_distance_max.desc": "使用滚轮调整时相机到玩家的最大距离。",
+	"leawind_third_person.option.camera_distance_min": "距离系数下限",
+	"leawind_third_person.option.camera_distance_min.desc": "使用滚轮调整时相机到玩家的最小距离系数。",
+	"leawind_third_person.option.camera_distance_max": "距离上限系数",
+	"leawind_third_person.option.camera_distance_max.desc": "使用滚轮调整时相机到玩家的最大距离系数。",
 	"leawind_third_person.option.flying_smooth_halflife": "飞行时相机跟随玩家的平滑系数",
 	"leawind_third_person.option.flying_smooth_halflife.desc": "",
 	"leawind_third_person.option.t2f_transition_halflife": "过渡平滑系数",
@@ -81,7 +81,7 @@
 	"leawind_third_person.option.camera_offset_smooth_halflife.desc": "",
 	"leawind_third_person.option.distance_smooth_halflife": "距离平滑系数",
 	"leawind_third_person.option.distance_smooth_halflife.desc": "相机远离玩家的时间。",
-	"leawind_third_person.option.max_distance": "相机到玩家的最大距离",
+	"leawind_third_person.option.max_distance": "相机到玩家的最大距离系数",
 	"leawind_third_person.option.max_distance.desc": "",
 	"leawind_third_person.option.offset_x": "X偏移",
 	"leawind_third_person.option.is_centered": "玩家居中",
@@ -96,7 +96,7 @@
 	"leawind_third_person.option.sprint_impulse_threshold": "疾跑脉冲阈值",
 	"leawind_third_person.option.sprint_impulse_threshold.desc": "疾跑脉冲阈值。",
 	"leawind_third_person.option.enable_target_entity_predict": "瞄准时启用目标实体预测",
-	"leawind_third_person.option.enable_target_entity_predict.desc": "瞄准时，预测想要射击的目标实体，据此计算玩家朝向，以便更好地瞄准目标。",
+	"leawind_third_person.option.enable_target_entity_predict.desc": "瞄准时，自动预测想要射击的目标实体，据此计算玩家朝向，以便更好地瞄准目标。",
 	"leawind_third_person.option.skip_vanilla_second_person_camera": "跳过原版第二人称",
 	"leawind_third_person.option.skip_vanilla_second_person_camera.desc": "仅保留第一人称和第三人称视角",
 	"leawind_third_person.option.auto_rotate_interacting": "交互时自动转身",
@@ -107,8 +107,6 @@
 	"leawind_third_person.option.rotate_interacting_type.desc": "True表示准星落点，False表示相机与相机朝向相同。",
 	"leawind_third_person.option.rotate_interacting_type.turn_to_crosshair": "转向准星",
 	"leawind_third_person.option.rotate_interacting_type.turn_with_camera": "与相机朝向相同",
-	"leawind_third_person.option.projectile_auto_aim": "射击时自动瞄准",
-	"leawind_third_person.option.projectile_auto_aim.desc": "瞄准方块或实体时，自动调整射击角度以击中该目标。",
 	"leawind_third_person.option.determine_aim_mode_by_animation": "通过动画判断瞄准模式",
 	"leawind_third_person.option.determine_aim_mode_by_animation.desc": "当相机实体播放特定动画时，自动进入瞄准模式。",
 	"leawind_third_person.option.hold_to_aim_item_pattern_expressions": "手持时自动瞄准",
