--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -29,8 +29,8 @@
 	"leawind_third_person.option_group.adjusting_camera.desc": "By default, holding Z allows you to use the mouse to adjust the camera's offset and distance.",
 	"leawind_third_person.option_group.behavior_interacting": "Player Rotation During Interaction",
 	"leawind_third_person.option_group.behavior_interacting.desc": "How the player rotates when pressing the interact key (attack|use|select).",
-	"leawind_third_person.option.is_mod_enable": "Is this mod enabled?",
-	"leawind_third_person.option.is_mod_enable.desc": "Disabling this will show the original third-person perspective, but you can still open the configuration screen with a key.",
+	"leawind_third_person.option.is_mod_enabled": "Is this mod enabled?",
+	"leawind_third_person.option.is_mod_enabled.desc": "Disabling this will show the original third-person perspective, but you can still open the configuration screen with a key.",
 	"leawind_third_person.option.config_screen_api": "Config Screen API",
 	"leawind_third_person.option.config_screen_api.desc": "",
 	"leawind_third_person.option.center_offset_when_flying": "Automatically center when flying",
