--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -29,8 +29,8 @@
 	"leawind_third_person.option_group.adjusting_camera.desc": "默认按住Z可以用鼠标调节相机的偏移量和远近。",
 	"leawind_third_person.option_group.behavior_interacting": "交互时玩家转动方式",
 	"leawind_third_person.option_group.behavior_interacting.desc": "当按下交互键（攻击|使用|选取）时，玩家如何转动。",
-	"leawind_third_person.option.is_mod_enable": "本模组是否启用",
-	"leawind_third_person.option.is_mod_enable.desc": "禁用后将显示原版第三人称视角，但仍可以按键打开配置屏幕。",
+	"leawind_third_person.option.is_mod_enabled": "本模组是否启用",
+	"leawind_third_person.option.is_mod_enabled.desc": "禁用后将显示原版第三人称视角，但仍可以按键打开配置屏幕。",
 	"leawind_third_person.option.config_screen_api": "配置屏幕API",
 	"leawind_third_person.option.config_screen_api.desc": "",
 	"leawind_third_person.option.center_offset_when_flying": "飞行时自动居中",
